# vin-car

./: .gitignore  BOT_GUIDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.render  LICENSE  QUICKSTART.md  README.md  bot_manager.sh  create_table.py  deploy.sh  docker-compose.production.yml  docker-compose.yml  env.example  env.production  main.py  nginx.conf  pyproject.toml  render.yaml  requirements.txt  reset_new_bot.py  reset_webhook.py  restart_bot.sh  run_bot_background.sh  simple_bot.py  simple_payment_test.py  simple_working_bot.py  start_bot.sh  test_bot_simple.py  test_new_bot.py  test_payment_system.py  test_supabase.py  update_github.sh
.cursor/: design.md  requirements.md  rules.md  tasks.md
migrations/: add_payment_tables.py  add_payment_tables_simple.py
src/: bot.py  db.py  db_adapter.py  keyboards.py  models.py  payment_service.py  settings.py  supabase_config.py  supabase_db.py  validators.py
src/handlers/: __init__.py  callbacks.py  manager.py  user.py
tests/: __init__.py  test_validators.py
